// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpenseSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 3 
    1
     
    expense
     totalling 
    $235.00
  </h1>
</div>
`;

exports[`Should correctly render ExpenseSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 3 
    23
     
    expenses
     totalling 
    $320,984,930.00
  </h1>
</div>
`;
